// $Id$

Apache Solr Multilingual 6.x-1.0-alpha1, 2010-xx-xx
---------------------------------------------------
[       ] mkalkbrenner: first protoype for title and body
[       ] mhuder: added first prototype of schema generator for multiple languages
[       ] mkalkbrenner: added variable to decide if translations should be indexed
[       ] mkalkbrenner: added tabs to apache solr admin backend
[       ] mhuder: added support for single language schema.xml
[#750426] mkalkbrenner: removed textTight. see http://drupal.org/node/750426
[       ] mkalkbrenner: prepared multiple spell fields
[       ] mkalkbrenner: added compound splitter to fieldType text
[       ] mhuder: added module apachesolr_multilingual_textfile to administer stopwords and so on
[       ] mhuder: automated generation of apachesolr textfiles
[       ] mhuder: added isolatin1accent_filter
[       ] mkalkbrenner: adjusted access rights
[       ] mkalkbrenner: added deatailed instructions to README.txt